--- a/public/components/ActivitiesTable.scss
+++ b/public/components/ActivitiesTable.scss
@@ -1,6 +1,10 @@
 @import "../globals.scss";
 
 .activities-table {
+  table {
+    table-layout: fixed;
+  }
+
   thead th, tr, td {
     border: 2px solid #BDBABA;
   }
@@ -23,10 +27,6 @@
     td {
       border-bottom: none;
     }
-  }
-
-  .selectedColumn {
-    background: red;
   }
 
   &.timetables {
