--- a/public/components/classroom/ClassroomDetails.scss
+++ b/public/components/classroom/ClassroomDetails.scss
@@ -36,11 +36,16 @@
   }
 
   .details {
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: 15px;
-    z-index: 10;
   }
 
   .buttons-box {
-    padding: 25px 30px;
+    padding: 25px 30px 0;
+
+    div.col {
+      margin-bottom: 25px;
+    }
   }
 }
